fixed scrollbar issues

--- a/public/assets/css/sidebar.css
+++ b/public/assets/css/sidebar.css
@@ -8,8 +8,8 @@
     rgba(148, 94, 179, 0.8) 0%,
     rgba(95, 107, 232, 0.8) 80%
   ); /* Added radial gradient */
-  overflow-y: auto;
-  overflow-x: hidden;
+  overflow-y: auto !important;
+  overflow-x: hidden !important;
   z-index: 20;
   transition: transform 0.25s ease-in-out;
   -webkit-transition: -webkit-transform 0.25s ease-in-out;
@@ -24,8 +24,8 @@
 
 .sidebar-container {
   padding: 20px 0;
-  overflow-y: auto;
-  overflow-x: hidden;
+  overflow-y: auto !important;
+  overflow-x: hidden !important;
 }
 
 .sidebar-buttons {
